--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.24.0",
     "react-use": "^17.5.0",
+    "swiper": "^11.1.14",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
